# main-strategy

./: CMakeLists.txt  README.md  package.xml
.github/: dependencies.repos
.github/workflows/: test.yml
include/: constants.h  core.h  dnf_math.h  helpers_broker.h
include/Krabi/: angle.h  distance.h  position.h  positionPlusAngle.h  vec2d.h  vec3d.h
include/odometry/: fullOdometry.h  lightOdometry.h  odomTFPublisher.h
launch/: krabossBlue.launch  krabossBlueSimu.launch  krabossMain.launch  krabossMainSimu.launch  krabossNotBlue.launch  krabossNotBlueSimu.launch  main.launch  main_strat_launch.py  odomTFPublisher.launch  odom_TF_pub_launch.py
src/: core.cpp  dnf_math.c  helpers_broker.c  main.cpp  main_strategy_node.cpp  odometry_node.cpp  publishers_creator.cpp  speed_controller.cpp  subscribers_creator.cpp
src/Krabi/: angle.cpp  distance.cpp  krabi  position.cpp  positionPlusAngle.cpp  vec2d.cpp  vec3d.cpp
src/odometry/: fullOdometry.cpp  lightOdometry.cpp  odomTFPublisher.cpp  odometry.cpp
test/: test_core_node.cpp  test_goal_reach.py  test_helpers.cpp  test_obstacle_logic.cpp
