<?xml version="1.0"?>
<package format="2">
  <name>main_strategy</name>
  <version>0.0.0</version>
  <description>The main_strategy package</description>

  <maintainer email="victor.dubois@free.fr">victor</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>goal_strategy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>krabi_msgs</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>lidar_strategy</depend>


  <export>
  </export>
</package>
