<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>main_strategy</name>
  <version>0.0.0</version>
  <description>The main_strategy package</description>

  <maintainer email="victor.dubois@free.fr">victor</maintainer>

  <license>TODO</license>


<buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>goal_strategy</build_depend>
  <build_depend>krabi_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>lidar_strategy</build_depend>


  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rclpy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>goal_strategy</build_export_depend>
  <build_export_depend>krabi_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>lidar_strategy</build_export_depend>


  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>goal_strategy</exec_depend>
  <exec_depend>krabi_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>lidar_strategy</exec_depend>
  

  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <cpp cflags="-I${prefix}/srv/cpp"/>
  </export>
</package>



  <export>
  </export>
</package>
